# phys-3450-final

./: .gitignore  README.md  pyproject.toml
report/: main.tex  references.bib
results/: metrics.json
scripts/: run_experiment.py
src/quantum_feature_maps/: __init__.py  data.py  experiments.py  feature_maps.py  kernels.py  plotting.py
